Update startup scripts